# ChangeLog for x11-plugins/gkrellmitime
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmitime/Attic/ChangeLog,v 1.14 2004/12/28 22:16:52 ciaranm Exp $

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  19 Jul 2004; Bryan Østergaard <kloeri@gentoo.org> gkrellmitime-1.0.1.ebuild:
  Stable on alpha.

  21 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> gkrellmitime-1.0.1.ebuild:
  marked ~amd64

  01 Mar 2004; Markus Nigbur <pyrania@gentoo.org> gkrellmitime-0.5.1.ebuild:
  Stable on x86.

  21 Jan 2004; Sven Blumenstein <bazik@gentoo.org> gkrellmitime-1.0.1.ebuild:
  Stable on sparc.

  20 Jan 2004; Aron Griffis <agriffis@gentoo.org> gkrellmitime-1.0.1.ebuild,
  gkrellmitime-1.0.ebuild:
  mark 1.0 stable on alpha; add ~alpha to 1.0.1

*gkrellmitime-1.0.1 (18 Jan 2004)

  18 Jan 2004; Martin Holzer <mholzer@gentoo.org> gkrellmitime-1.0.1.ebuild:
  Version bumped. Closes 38340

  18 Sep 2003; David Holm <dholm@gentoo.org> gkrellmitime-1.0.ebuild:
  Added to ~ppc.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gkrellmitime-1.0 (16 Oct 2002)

  16 Oct 2002; Seemant Kulleen <seemant@gentoo.org> gkrellmitime-1.0.ebuild
  files/digest-gkrellmitime-1.0 :

  GKrellM2 version submitted by: gustavo@felisberto.net (Gustavo Felisberto)
  in bug #8926.

*gkrellmitime-0.5.1 (16 Oct 2002)

  16 Oct 2002; Seemant Kulleen <seemant@gentoo.org>
  gkrellmitime-0.5.1.ebuild files/digest-gkrellmitime-0.5.1 :

  Version bump for the gkrellm version (includes NLS support now).

*gkrellmitime-0.4 (1 Feb 2002)

  29 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Relocated to x11-plugins

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the