@@ -1,9 +1,9 @@
-MD5 e62a7ea4f8940a472e8bd44c5045fce5 gkrellmitime-1.0.1.ebuild 636
-MD5 d9d5cf98e24068a569646e1f277fe6d5 ChangeLog 2188
+MD5 9f7bb9280eb69e298789f98865414296 gkrellmitime-1.0.1.ebuild 663
 MD5 6008dffd799ae90127ee7f20521027f4 gkrellmitime-1.0.ebuild 630
 MD5 0967bd8ee47104520f387caaaf203e9a gkrellmitime-0.5.1.ebuild 718
 MD5 e19f8a2b6a12d67e8e2235ff1c87b0b1 gkrellmitime-0.4.ebuild 638
-MD5 4d00717aa575f50036b0129992917506 files/digest-gkrellmitime-1.0 67
+MD5 beb20ed2361423c66fdac7875b08b671 ChangeLog 2284
 MD5 503a4f552ef762dc99302f2cd842717c files/digest-gkrellmitime-0.4 67
-MD5 52f46f069e47ebb97fe755fcb2061acf files/digest-gkrellmitime-1.0.1 69
+MD5 4d00717aa575f50036b0129992917506 files/digest-gkrellmitime-1.0 67
 MD5 efa4b3b7158eaf277dad14da3b096826 files/digest-gkrellmitime-0.5.1 69
+MD5 52f46f069e47ebb97fe755fcb2061acf files/digest-gkrellmitime-1.0.1 69
