@@ -1,6 +1,8 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmitime/Attic/gkrellmitime-1.0.1.ebuild,v 1.9 2004/07/18 23:58:44 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmitime/Attic/gkrellmitime-1.0.1.ebuild,v 1.10 2005/04/27 20:16:25 herbs Exp $
+
+inherit multilib
 
 IUSE=""
 DESCRIPTION="Internet Time plugin for Gkrellm2"
@@ -9,7 +11,7 @@ SRC_URI="http://eric.bianchi.free.fr/Softwares/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="2"
-KEYWORDS="x86 ppc sparc alpha ~amd64"
+KEYWORDS="x86 ppc sparc alpha amd64"
 
 DEPEND=">=app-admin/gkrellm-2*"
 
@@ -18,7 +20,7 @@ src_compile() {
 }
 
 src_install() {
-	insinto /usr/lib/gkrellm2/plugins
+	insinto /usr/$(get_libdir)/gkrellm2/plugins
 	doins gkrellm_itime.so
 	dodoc README ChangeLog COPYING
 }
