@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellmitime
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmitime/Attic/ChangeLog,v 1.14 2004/12/28 22:16:52 ciaranm Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmitime/Attic/ChangeLog,v 1.15 2005/04/27 20:16:25 herbs Exp $
+
+  27 Apr 2005; Herbie Hopkins <herbs@gentoo.org> gkrellmitime-1.0.1.ebuild:
+  Stable on amd64.
 
   28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
